# example-lua-swig

./: Makefile.am  README.md  configure.ac  test.c  test.h  test.i
